--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -6,9 +6,14 @@ resource_version <- "20230811-095752-5b8181d8"
 
 ## Epilepsy example
 
-### TMB C++ template {#tmb-epil}
+### `TMB` C++ template {#tmb-epil}
 
 ```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil.cpp")}
+```
+
+### `Stan` C++ template {#stan-epil}
+
+```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil.stan")}
 ```
 
 ## Simplified Naomi model description {#naomi-math}
