--- a/references.bib
+++ b/references.bib
@@ -2131,3 +2131,14 @@ doi = {10.1201/9781420072884-c30}
   year={2013},
   publisher={John Wiley \& Sons}
 }
+
+@article{bolker2013strategies,
+  title={Strategies for fitting nonlinear ecological models in R, AD M odel B uilder, and BUGS},
+  author={Bolker, Benjamin M and Gardner, Beth and Maunder, Mark and Berg, Casper W and Brooks, Mollie and Comita, Liza and Crone, Elizabeth and Cubaynes, Sarah and Davies, Trevor and de Valpine, Perry and others},
+  journal={Methods in Ecology and Evolution},
+  volume={4},
+  number={6},
+  pages={501--512},
+  year={2013},
+  publisher={Wiley Online Library}
+}
